package.json updated.

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "gitbook-plugin-anchor-navigation": "0.0.1"
   },
   "scripts": {
-    "install-zh": "sudo npm install -g gitbook-cli && gitbook install zh/api && gitbook install zh/manual",
-    "install-en": "sudo npm install -g gitbook-cli && gitbook install en/api && gitbook install en/manual",
+    "install-zh": "npm install gitbook-cli && gitbook install zh/api && gitbook install zh/manual",
+    "install-en": "npm install gitbook-cli && gitbook install en/api && gitbook install en/manual",
     "init-zh": "gitbook init zh/api && gitbook init zh/manual",
     "init-en": "gitbook init en/api && gitbook init en/manual",
     "build-api-zh": "gitbook serve zh/api",
     "build-manual-zh": "gitbook serve zh/manual",
     "build-api-en": "gitbook serve en/api",
-    "build-manual-en": "gitbook serve en/manual" 
+    "build-manual-en": "gitbook serve en/manual"
   }
 }
