--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-api-zh": "gitbook serve zh/api",
     "build-manual-zh": "gitbook serve zh/manual",
     "build-api-en": "gitbook serve en/api",
-    "build-manual-en": "gitbook serve en/manual"
+    "build-manual-en": "gitbook serve en/manual",
+    "extract-api": "node utils/extract.js"
   }
 }
